# assistant

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  config.json  pumpkinsmp_assistant.sublime-workspace  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: black-push.yml  codeql-analysis.yml  linting-style-push.yml
embeds/: information.json  rules.json
src/: bot.py  keep_alive.py
src/cogs/: errors.py  events.py  fake_mod.py  fun.py  mc_server.py
src/exts/: config.py  db.py  errors.py  fun.py  greeting.py  help.py  logs.py  mod.py  pterodactyl.py  reactroles.py  reports.py  suggestions.py  support.py  tickets.py  utils.py
