[tool.poetry]
name = "repl_python3_assistant"
version = "0.1.0"
description = ""
authors = ["MouseMoosz <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
nextcord = "2.0.0a10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
