[tool.poetry]
name = "repl_python3_assistant"
version = "0.1.0"
description = ""
authors = ["MouseMoosz <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.1"
nextcord = "2.0.0a10"
wheel = "^0.37.1"
python-dotenv = "^0.20.0"
jishaku = "2.4.0"
cchardet = "^2.1.7"
aiohttp = "^3.8.1"
aiodns = "^3.0.0"
py-dactyl = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
